fixtures/positive/header_footerskip_structure.inc
---
title = Header and footer data
[structure]
header = 2
footerskip = 1
---
discard,discard
name,score
Ada,21
Babbage,12
TOTAL,33
