fixtures/negative/invalid_structure_int.inc
---
title = Invalid structure int
[structure]
header = "2"
---
discard,discard
name,score
Ada,21
